# telegram-bot-biostatus

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  deny.toml  docker-bake.hcl
.cargo/: config.toml
.github/workflows/: docker.yml
crates/bioauth_logic/: Cargo.toml
crates/bioauth_logic/src/: bioauth_subscription_map.rs  lib.rs  tests.rs
crates/bioauth_notification_manager/: Cargo.toml
crates/bioauth_notification_manager/src/: lib.rs  tests.rs
crates/bioauth_settings/: Cargo.toml
crates/bioauth_settings/src/: lib.rs
crates/biostatus/: Cargo.toml
crates/biostatus/src/: main.rs
crates/block_subscription/: Cargo.toml
crates/block_subscription/src/: lib.rs
crates/chain/: Cargo.toml
crates/chain/src/: lib.rs
crates/channel_messages/: Cargo.toml
crates/channel_messages/src/: lib.rs
crates/database/: Cargo.toml
crates/database/migrations/2024-05-07-193214_create_account_settings_table/: down.sql  up.sql
crates/database/migrations/2024-05-16-190623_create_bioauth_subscriptions/: down.sql  up.sql
crates/database/migrations/2024-05-16-190623_create_bioauth_subscriptions_and_dev_subscriptions/: down.sql  up.sql
crates/database/src/: db.rs  error.rs  lib.rs  models.rs  schema.rs
crates/dev_subscriptions/: Cargo.toml
crates/dev_subscriptions/src/: lib.rs
crates/logic/: Cargo.toml
crates/logic/src/: lib.rs  state.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/main_loop/: Cargo.toml
crates/main_loop/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: handlers.rs  lib.rs  messages.rs  teloxide_ext.rs
crates/telegram/src/bioauth_handlers/: mod.rs
crates/telegram/src/handlers/: admin.rs  common.rs  manage_dev_subscriptions.rs  manage_validator_subscriptions.rs  mod.rs  subscribe.rs  subscription_update.rs  unsubscribe.rs  update_alert_before_expiration_in_mins.rs  update_max_message_frequency_in_blocks.rs  utils.rs
