[package]
name = "telegram-bot-biostatus"
version = "0.1.0"
edition = "2021"

[dependencies]
chain = { version = "0.1", path = "../chain" }
database = { version = "0.1", path = "../database" }
telegram = { version = "0.1", path = "../telegram" }

anyhow = "1.0.71"
envfury = "0.2"
hex = "0.4"
teloxide = { version = "0.12", features = ["macros", "bincode-serializer", "redis-storage"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
