[package]
name = "telegram-bot-biostatus"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { version = "0.1", path = "../database" }
telegram = { version = "0.1", path = "../telegram" }
main_loop = { version = "0.1", path = "../main_loop" }
block_subscription = { version = "0.1", path = "../block_subscription" }

anyhow = "1.0.71"
diesel = { version = "2.1", features = ["postgres"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
envfury = "0.2"
hex = "0.4"
teloxide = { version = "0.12", features = ["macros", "bincode-serializer", "redis-storage"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
