[package]
name = "main_loop"
version = "0.1.0"
edition = "2021"

[dependencies]
bioauth_logic = { version = "0.1", path = "../bioauth_logic" }
bioauth_settings = { version = "0.1", path = "../bioauth_settings" }
block_subscription = { version = "0.1", path = "../block_subscription" }
database = { version = "0.1", path = "../database" }
dev_subscriptions = { version = "0.1", path = "../dev_subscriptions" }
telegram = { version = "0.1", path = "../telegram" }

anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
