[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
channel_messages = { version = "0.1", path = "../channel_messages" }

anyhow = "1"
derivative = "2"
hex = "0.4"
indoc = "2"
serde = "1"
subxt = "0.36"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
